[package]
name = "ergokv"
version = "0.1.0"
edition = "2021"
description = "Easily store and retrieve data from TiKV with a derive"
license = "Fair"
repository = "https://github.com/luciusmagn/ergokv"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.37"
syn = "2.0.83"
proc-macro2 = "1.0"
ciborium = "0.2.2"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tikv-client = "0.3"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
