[package]
name = "ergokv"
version = "0.1.3"
edition = "2021"
description = "Easily store and retrieve data from TiKV with a derive"
license = "Fair"
repository = "https://github.com/luciusmagn/ergokv"
documentation = "https://docs.rs/ergokv"

[dependencies]
ergokv-macro = { version = "0.1.3", path = "ergokv-macro" }
tikv-client = "0.3"
ciborium = "0.2.2"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
