[package]
name = "ergokv"
version = "0.1.10"
edition = "2021"
description = "Easily store and retrieve data from TiKV with a derive"
license = "Fair"
repository = "https://github.com/luciusmagn/ergokv"
documentation = "https://docs.rs/ergokv"

[features]
strict-migrations = ["ergokv-macro/strict-migrations"]

[dependencies]
ergokv-macro = { version = "0.1.10", path = "ergokv-macro" }
tikv-client = "0.3"
ciborium = "0.2.2"
which = "6.0.3"
serde_with = "3.11.0"
serde = "1.0"
futures = "0.3.31"
async-stream = "0.3.6"
serde_json = "1.0.132"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tempfile = "3.13.0"
