[package]
name = "ergokv-macro"
version = "0.1.4"
edition = "2021"
description = "Easily store and retrieve data from TiKV with a derive"
license = "Fair"
repository = "https://github.com/luciusmagn/ergokv"
documentation = "https://docs.rs/ergokv"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.37"
syn = "2.0.83"
proc-macro2 = "1.0"
